--- a/css/utilities.scss
+++ b/css/utilities.scss
@@ -119,7 +119,7 @@ $page-padding-big-screen: 10vw;
 }
 
 //Element sizes ▼
-$header-height: clamp(35px, 7vmin, 200px);
+$header-height: clamp(35px, 7vh, 200px);
 
 
 //Buttons, links
